--- a/cookbooks/gapinfo/.kitchen.yml
+++ b/cookbooks/gapinfo/.kitchen.yml
@@ -9,18 +9,20 @@ provisioner:
   #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
 
-verifier:
-  name: inspec
+# verifier:
+#   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
-  - name: centos-7
+  - name: ubuntu-18.04
+    driver:
+      box: ubuntu/xenial64
+  # - name: centos-7
 
 suites:
   - name: default
     run_list:
       - recipe[gapinfo::default]
-    verifier:
-      inspec_tests:
-        - test/smoke/default
+    # verifier:
+    #   inspec_tests:
+    #     - test/smoke/default
     attributes:
